tests/src/frontend/typechecking/invalid/const_using_tparam_1.sk
class B<T: String>() {
  const x: String = {
    _ = T;
    "FAIL"
  };
}
